--- a/index-en.html
+++ b/index-en.html
@@ -24,16 +24,26 @@
 			<input class="menu-btn" type="checkbox" id="menu-btn" />
 			<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 			<ul class="menu">
-				<li><a aria-label="Váltás magyar nyelvre/Switch to Hungarian" class="language-switcher-container" href="index.html">
-					<span class="language-switcher">
-						<svg width="16" height="16" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path class="ls-color" d="M14.9175 14.4917C14.7008 13.825 14.0758 13.3333 13.3341 13.3333H12.5008V10.8333C12.5008 10.6123 12.413 10.4003 12.2567 10.2441C12.1005 10.0878 11.8885 9.99999 11.6675 9.99999H6.66748V8.33332H8.33415C8.55516 8.33332 8.76712 8.24552 8.9234 8.08924C9.07968 7.93296 9.16748 7.721 9.16748 7.49999V5.83332H10.8341C11.2762 5.83332 11.7001 5.65773 12.0127 5.34517C12.3252 5.03261 12.5008 4.60868 12.5008 4.16666V3.82499C14.9425 4.80832 16.6675 7.19999 16.6675 9.99999C16.6675 11.7333 16.0008 13.3083 14.9175 14.4917ZM9.16748 16.6083C5.87581 16.2 3.33415 13.4 3.33415 9.99999C3.33415 9.48332 3.40081 8.98332 3.50915 8.50832L7.50081 12.5V13.3333C7.50081 13.7753 7.67641 14.1993 7.98897 14.5118C8.30153 14.8244 8.72545 15 9.16748 15V16.6083ZM10.0008 1.66666C8.90647 1.66666 7.82283 1.8822 6.81179 2.30099C5.80074 2.71978 4.88208 3.33361 4.10826 4.10743C2.54545 5.67024 1.66748 7.78985 1.66748 9.99999C1.66748 12.2101 2.54545 14.3297 4.10826 15.8925C4.88208 16.6664 5.80074 17.2802 6.81179 17.699C7.82283 18.1178 8.90647 18.3333 10.0008 18.3333C12.211 18.3333 14.3306 17.4553 15.8934 15.8925C17.4562 14.3297 18.3341 12.2101 18.3341 9.99999C18.3341 8.90564 18.1186 7.82201 17.6998 6.81096C17.281 5.79991 16.6672 4.88125 15.8934 4.10743C15.1195 3.33361 14.2009 2.71978 13.1898 2.30099C12.1788 1.8822 11.0952 1.66666 10.0008 1.66666Z" fill="var(--Low-emp)"/>
-						</svg>
-						Magyar</span></a></li>
-						<li><a href="index-en.html">Home</a></li>
-						<li><a href="about-en.html">About</a></li>
-						<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU7J0YxWmDz_hzcaNftkcziByKBA4xKT4Kk4zYip8-DdziLA/viewform?usp=sf_link" target="blank">Submit a business</a></li>
-						<!-- <li><a class="button-container" href="https://www.google.com/" target="blank"><span class="button">Submit your store</span></a></li> -->
+
+				<li><a class="selected-menu-item" href="index-en.html"><u>Home</u></a></li>
+				<li><a href="about-en.html">About</a></li>
+
+
+						<li><a class="submit-container" href="https://docs.google.com/forms/d/e/1FAIpQLSfU7J0YxWmDz_hzcaNftkcziByKBA4xKT4Kk4zYip8-DdziLA/viewform?usp=sf_link" target="_blank">
+							<span class="submit">
+							<svg fill="none" height="16" viewBox="0 0 20 14" width="16" xmlns="http://www.w3.org/2000/svg"><path class="ls-color" d="m11.6667 2.5v1.66667h2.9916l-8.19163 8.19163 1.175 1.175 8.19163-8.19163v2.99166h1.6667v-5.83333zm4.1666 13.3333h-11.66663v-11.66663h5.83333v-1.66667h-5.83333c-.925 0-1.66667.75-1.66667 1.66667v11.66663c0 .4421.17559.866.48816 1.1785.31256.3126.73648.4882 1.17851.4882h11.66663c.4421 0 .866-.1756 1.1785-.4882.3126-.3125.4882-.7364.4882-1.1785v-5.8333h-1.6667z" fill="var(--Low-emp)"/></svg>
+							Submit a business</span></a></li>
+
+							<li><a aria-label="Váltás magyar nyelvre/Switch to Hungarian" class="language-switcher-container" href="index.html">
+								<span class="language-switcher">
+									<svg width="16" height="16" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path class="ls-color" d="M14.9175 14.4917C14.7008 13.825 14.0758 13.3333 13.3341 13.3333H12.5008V10.8333C12.5008 10.6123 12.413 10.4003 12.2567 10.2441C12.1005 10.0878 11.8885 9.99999 11.6675 9.99999H6.66748V8.33332H8.33415C8.55516 8.33332 8.76712 8.24552 8.9234 8.08924C9.07968 7.93296 9.16748 7.721 9.16748 7.49999V5.83332H10.8341C11.2762 5.83332 11.7001 5.65773 12.0127 5.34517C12.3252 5.03261 12.5008 4.60868 12.5008 4.16666V3.82499C14.9425 4.80832 16.6675 7.19999 16.6675 9.99999C16.6675 11.7333 16.0008 13.3083 14.9175 14.4917ZM9.16748 16.6083C5.87581 16.2 3.33415 13.4 3.33415 9.99999C3.33415 9.48332 3.40081 8.98332 3.50915 8.50832L7.50081 12.5V13.3333C7.50081 13.7753 7.67641 14.1993 7.98897 14.5118C8.30153 14.8244 8.72545 15 9.16748 15V16.6083ZM10.0008 1.66666C8.90647 1.66666 7.82283 1.8822 6.81179 2.30099C5.80074 2.71978 4.88208 3.33361 4.10826 4.10743C2.54545 5.67024 1.66748 7.78985 1.66748 9.99999C1.66748 12.2101 2.54545 14.3297 4.10826 15.8925C4.88208 16.6664 5.80074 17.2802 6.81179 17.699C7.82283 18.1178 8.90647 18.3333 10.0008 18.3333C12.211 18.3333 14.3306 17.4553 15.8934 15.8925C17.4562 14.3297 18.3341 12.2101 18.3341 9.99999C18.3341 8.90564 18.1186 7.82201 17.6998 6.81096C17.281 5.79991 16.6672 4.88125 15.8934 4.10743C15.1195 3.33361 14.2009 2.71978 13.1898 2.30099C12.1788 1.8822 11.0952 1.66666 10.0008 1.66666Z" fill="var(--Low-emp)"/>
+									</svg>
+									Magyar</span></a></li>
+
+
+						<!-- <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU7J0YxWmDz_hzcaNftkcziByKBA4xKT4Kk4zYip8-DdziLA/viewform?usp=sf_link" target="blank">Submit a business</a></li> -->
+
 					</ul>
 				</div>
 			</header>
