--- a/index-en.html
+++ b/index-en.html
@@ -15,11 +15,11 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-
+	<a name="top"></a>
 	<header class="header">
 		<div class="big-wrapper extrapadding">
 			<a href="index-en.html" class="logo"><svg width="12" height="28" viewBox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M8.625 9.92405L10.425 8.84658C11.37 9.32861 12 10.2643 12 11.3418V28C12 28 0 25.519 0 12.7595V11.3418C0 10.3068 0.585 9.39949 1.455 8.90329L3.645 9.92405L6 8.50633L8.625 9.92405ZM3 0C5.295 0 7.2 1.63038 7.5 3.74278C9 4.15392 10.215 5.20304 10.83 6.56405L8.625 7.79747L6 6.37975L3.645 7.79747L1.14 6.62076C1.725 5.27392 2.925 4.25316 4.41 3.77114C4.2 3.2324 3.645 2.83544 3 2.83544V0Z" fill="#E44848"/>
+				<path d="M8.625 9.92405L10.425 8.84658C11.37 9.32861 12 10.2643 12 11.3418V28C12 28 0 25.519 0 12.7595V11.3418C0 10.3068 0.585 9.39949 1.455 8.90329L3.645 9.92405L6 8.50633L8.625 9.92405ZM3 0C5.295 0 7.2 1.63038 7.5 3.74278C9 4.15392 10.215 5.20304 10.83 6.56405L8.625 7.79747L6 6.37975L3.645 7.79747L1.14 6.62076C1.725 5.27392 2.925 4.25316 4.41 3.77114C4.2 3.2324 3.645 2.83544 3 2.83544V0Z" fill="var(--Accent)"/>
 			</svg> Hun-made</a>
 			<input class="menu-btn" type="checkbox" id="menu-btn" />
 			<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -50,6 +50,12 @@
 			<div id="top-shadow"></div>
 
 			<div class="big-wrapper">
+
+				<a class="to-top-button" id="top-button">
+					<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M10.8993 16.5994L9.23268 16.5994L9.23268 6.59941L4.64935 11.1827L3.46602 9.99942L10.066 3.39941L16.666 9.99942L15.4827 11.1827L10.8993 6.59941L10.8993 16.5994Z" fill="var(--Low-emp)"/>
+					</svg>
+				</a>
 
 				<!-- <div class="circle"></div>
 				<div class="circle-2"></div> -->
