--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<meta name="keywords" content="magyar, magyarország, vállalkozások, vállalkozók, ötletek, magyar designer márkák, kézműves termékek, fair-trade, környezetbarát, tudatos, vegán">
+  <meta name="description" content="Kreatív magyar vállalkozások gyűjtőhelye.">
+  <meta property="og:title" content="Hun-made">
+  <meta property="og:site_name" content="Hun-made">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://hun-made.com">
+  <meta property="og:image" content="../ogimg.png">
+  <meta property="og:description" content="Kreatív magyar vállalkozások gyűjtőhelye.">
+
 	<link rel="stylesheet" href="css/style.css">
 	<title>Hun-made</title>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
