--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 	<br><p class="bigger-p">Ezzel nincs is semmi baj, bár be kell, hogy valljuk, mindig is volt bennünk egy kis hiányérzet, miután a jól ismert kliséket elsorolva a kedves ismerős visszatért addigi tevékenységéhez: vajon miért van az, hogy ezek a berögződések már évek óta változatlanok? Miért van az, hogy az érdekes, izgalmas magyar kezdeményezésekről, vállalkozásokról, eseményekről a külföldiek (és talán még az otthon élők is) olyan keveset hallanak?</p>
 	</div>
 	</div>
-	<br><p class="bigger-p col-md-9">Az okokat persze lehetne széleskörűen kutatni, mi azonban egyszerűen csak megpróbálunk erre a problémára megoldást nyújtani a weboldalunk létrehozásával. Az a célunk, hogy létrehozzunk egy olyan gyűjtőhelyet, ahol az érdeklődő egy helyen talál meg mindent, amit okos, leleményes magyarok hoztak létre és dolgoznak rajta nap mint nap.
+	<br><p class="bigger-p col-md-9">Az okokat persze lehetne kutatni, mi azonban egyszerűen csak megpróbálunk erre a problémára megoldást nyújtani a weboldalunk létrehozásával. Az a célunk, hogy létrehozzunk egy olyan gyűjtőhelyet, ahol az érdeklődő egy helyen talál meg mindent, amit okos, leleményes magyarok hoztak létre és dolgoznak rajta nap mint nap.
 Reméljük, te is hasznosnak és érdekesnek találod oldalunkat - és ne feledd, ha úgy érzed, valamit kihagytunk, de itt lenne a helye, lépj kapcsolatba velünk.</p>
 	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7-o1tV1hq7HfJm511VSrgQVdfG8Pm6G2wrFgRE7xu19K4Og/viewform?usp=sf_link" target="blank">Vállalkozás beküldése</a></div>
 	</div>
