--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:site_name" content="Hun-made">
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://hun-made.com">
-  <meta property="og:image" content="../ogimg.png">
+  <meta property="og:image" content="../ogimg-2.png">
   <meta property="og:description" content="Kreatív magyar vállalkozások gyűjtőhelye.">
 
 	<link rel="stylesheet" href="css/style.css">
@@ -101,7 +101,7 @@
 					<section class="cards cd-gallery">
 						<ul>
 							<li class="card-padding mix fashion">
-								<a  class="cards__item" href="https://www.pomponia.hu/" target="_blank">
+								<a class="cards__item" href="https://www.pomponia.hu/" target="_blank">
 									<div class="card">
 										<div class="card__content">
 											<div class="card__image card__image--pomponia"></div>
