--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   <meta property="og:site_name" content="Hun-made">
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://hun-made.com">
-  <meta property="og:image" content="../ogimg.png">
+  <meta property="og:image" content="../ogimg-2.png">
   <meta property="og:description" content="A collection of ingenious Hungarian entrepreneurs.">
 
 	<link rel="stylesheet" href="css/style.css">
@@ -23,6 +23,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166314580-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-166314580-1');
+</script>
 </head>
 <body>
 	<a name="top"></a>
