--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="../ogimg-2.png">
   <meta property="og:description" content="A collection of ingenious Hungarian entrepreneurs.">
 
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css?v=1.2">
 	<title>Hun-made | 404</title>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
