--- a/about-en.html
+++ b/about-en.html
@@ -13,7 +13,7 @@
 	<meta property="og:image" content="../ogimg-2.png">
 	<meta property="og:description" content="A collection of ingenious Hungarian entrepreneurs.">
 
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css?v=1.2">
 	<title>Hun-made | About</title>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
@@ -75,17 +75,17 @@
 
 <div class="hero-container-2">
 	<h1>About</h1>
-	<p class="bigger-p description-2 col-md-9">Budapest, pretty girls and goulash... these are the most common things people mention when they amicably start chatting to us on a plane back to Budapest or when they casually talk to us on a meetup and learn that we are originally from Hungary. This is all great but we've always felt that something is missing: what about the people and great achievements of today's Hungary? Why does no one know about that?</p>
+	<p class="bigger-p-2 description-2 col-md-9">Budapest, pretty girls and goulash... these are the most common things people mention when they amicably start chatting to us on a plane back to Budapest or when they casually talk to us on a meetup and learn that we are originally from Hungary. This is all great but we've always felt that something is missing: what about the people and great achievements of today's Hungary? Why does no one know about that?</p>
 	<div class="flex-wrapper-about row">
 		<div class="image-side col-xs-12 col-md-5">
-			<img src="images/flora-zsolti.jpg" alt="">
+			<img src="images/flora-zsolti.jpg" alt="Two people taking a selfie while smiling in front of the Gellert Hotel.">
 			<p class="image-label"><a href="https://www.linkedin.com/in/cselenyiflora" target="blank">Flóra</a> and <a href="https://zsoltszilvai.com" target="blank">Zsolt</a>, the creators of this website</p>
 		</div>
 	<div class="text-side col-xs-12 col-md-7">
-	<br><p class="bigger-p">We believe that better showcasing the creative business ideas, ingenious arts and crafts that Hungarian entrepreneurs create, will help us add a new cliché to the well-known ones, something like this: "creative and talented Hungarians". And, as a big plus, it gives you the opportunity to find local suppliers and products more easily thus shop more sustainably.</p>
+	<br><p class="bigger-p-2">We believe that better showcasing the creative business ideas, ingenious arts and crafts that Hungarian entrepreneurs create, will help us add a new cliché to the well-known ones, something like this: "creative and talented Hungarians". And, as a big plus, it gives you the opportunity to find local suppliers and products more easily thus shop more sustainably.</p>
 	</div>
 	</div>
-	<br><p class="bigger-p col-md-9">Browse & learn about Hungarian entrepreneurs and their ingenious ideas and products. Help us expand this list: if you know of a similar great idea, fill out our form.</p>
+	<br><p class="bigger-p-2 col-md-9">Browse & learn about Hungarian entrepreneurs and their ingenious ideas and products. Help us expand this list: if you know of a similar great idea, fill out our form.</p>
 	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU7J0YxWmDz_hzcaNftkcziByKBA4xKT4Kk4zYip8-DdziLA/viewform?usp=sf_link" target="blank">Submit a business</a></div>
 	</div>
 
