Adding email address, introducing secondary button

--- a/about-en.html
+++ b/about-en.html
@@ -13,7 +13,7 @@
 	<meta property="og:image" content="../ogimg-2.png">
 	<meta property="og:description" content="A collection of ingenious Hungarian entrepreneurs.">
 
-	<link rel="stylesheet" href="css/style.css?v=1.2">
+	<link rel="stylesheet" href="css/style.css?v=1.3">
 	<title>Hun-made | About</title>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
@@ -87,6 +87,7 @@
 	</div>
 	<br><p class="bigger-p-2 col-md-8">Browse & learn about Hungarian entrepreneurs and their ingenious ideas and products. Help us expand this list: if you know of a similar great idea, fill out our form.</p>
 	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU7J0YxWmDz_hzcaNftkcziByKBA4xKT4Kk4zYip8-DdziLA/viewform?usp=sf_link" target="blank">Submit a business</a></div>
+	<div class="button button-secondary"><a href="mailto:hunmade2020@gmail.com" target="blank">Send us an email</a></div>
 	</div>
 
 
