--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	<meta property="og:image" content="../ogimg-2.png">
 	<meta property="og:description" content="Kreatív magyar vállalkozások gyűjtőhelye.">
 
-	<link rel="stylesheet" href="css/style.css?v=1.2">
+	<link rel="stylesheet" href="css/style.css?v=1.3">
 	<title>Hun-made | About</title>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
@@ -89,6 +89,7 @@
 	<br><p class="bigger-p-2 col-md-8">Az okokat persze lehetne széleskörűen kutatni, mi azonban egyszerűen csak megpróbálunk erre a problémára megoldást nyújtani a weboldalunk létrehozásával. Az a célunk, hogy létrehozzunk egy olyan gyűjtőhelyet, ahol az érdeklődő egy helyen talál meg mindent, amit okos, leleményes magyarok hoztak létre és dolgoznak rajta nap mint nap.
 Reméljük, te is hasznosnak és érdekesnek találod oldalunkat - és ne feledd, ha úgy érzed, valamit kihagytunk, de itt lenne a helye, lépj kapcsolatba velünk.</p>
 	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7-o1tV1hq7HfJm511VSrgQVdfG8Pm6G2wrFgRE7xu19K4Og/viewform?usp=sf_link" target="blank">Vállalkozás beküldése</a></div>
+	<div class="button button-secondary"><a href="mailto:hunmade2020@gmail.com" target="blank">Írj nekünk emailt</a></div>
 	</div>
 
 
