--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 							</li>
 
 							<li class="card-padding mix food">
-								<a  class="cards__item" href="https://www.fraau.com/" target="_blank">
+								<a  class="cards__item" href="https://fruitshop.hu/" target="_blank">
 									<div class="card">
 										<div class="card__content">
 											<div class="card__image card__image--fruitshop"></div>
