--- a/about.html
+++ b/about.html
@@ -5,17 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<meta name="keywords" content="magyar, magyarország, vállalkozások, vállalkozók, ötletek, magyar designer márkák, kézműves termékek, fair-trade, környezetbarát, tudatos, vegán">
-	<meta name="description" content="Kreatív magyar vállalkozások gyűjtőhelye.">
+	<meta name="description" content="Független magyar kisvállalkozások egy helyen.">
 	<meta property="og:title" content="Hun-made">
 	<meta property="og:site_name" content="Hun-made">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://hun-made.com">
 	<meta property="og:image" content="../ogimg-2.png">
-	<meta property="og:description" content="Kreatív magyar vállalkozások gyűjtőhelye.">
+	<meta property="og:description" content="Független magyar kisvállalkozások egy helyen.">
 
-	<link rel="stylesheet" href="css/style.css?v=1.3">
-	<title>Hun-made | About</title>
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script>
+	<link rel="stylesheet" href="css/style.css?v=1.4">
+	<title>Hun-made | Rólunk</title>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
 	<!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css?v=1.0"> -->
@@ -33,8 +33,20 @@
 
   gtag('config', 'UA-166314580-1');
 </script>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MN69W45');</script>
+<!-- End Google Tag Manager -->
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MN69W45"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 	<a name="top"></a>
 	<header class="header">
   <div class="big-wrapper extrapadding">
@@ -76,18 +88,19 @@
 
 <div class="hero-container-2">
 	<h1>Rólunk</h1>
-	<p class="bigger-p-2 description-2 col-md-8">Budapest, szép lányok és gulyásleves... általában ezeket említik a külföldi ismerőseink és kollégáink, amikor megtudják, hogy magyarok vagyunk.</p>
+	<p class="bigger-p-2 description-2 col-md-8">Budapest, szép lányok és gulyásleves - általában ezeket említik a külföldi ismerőseink és kollégáink, amikor megtudják, hogy magyarok vagyunk, és lelkesedve számolnak be legutóbbi élményeikről kis hazánkkal kapcsolatban.</p>
 	<div class="flex-wrapper-about row">
 		<div class="image-side col-xs-12 col-md-5">
 			<img src="images/flora-zsolti.jpg" alt="Két mosolygó ember szelfizik a Gellért Hotel előtt tavasszal.">
 			<p class="image-label">A weboldal készítői: <a href="https://www.linkedin.com/in/cselenyiflora" target="blank">Flóra</a> és <a href="https://zsoltszilvai.com" target="blank">Zsolt</a></p>
 		</div>
 	<div class="text-side col-xs-12 col-md-7">
-	<br><p class="bigger-p-2">Ezzel nincs is semmi baj, bár be kell, hogy valljuk, mindig is volt bennünk egy kis hiányérzet, miután a jól ismert kliséket elsorolva a kedves ismerős visszatért addigi tevékenységéhez: vajon miért van az, hogy ezek a berögződések már évek óta változatlanok? Miért van az, hogy az érdekes, izgalmas magyar kezdeményezésekről, vállalkozásokról, eseményekről a külföldiek (és talán még az otthon élők is) olyan keveset hallanak?</p>
+	<br><p class="bigger-p-2">Ezzel nincs is semmi baj: Budapest szerintünk is gyönyörű város, és a gulyást is nagyon szeretjük…
+Mégis, külföldön élő magyarként mindig marad bennünk egy kis hiányérzet: miért van az, hogy ezek a klisék évek óta változatlanok? Miért van az, hogy az érdekes, izgalmas magyar kezdeményezésekről, vállalkozásokról, eseményekről a külföldiek (és talán még az otthon élők is) olyan keveset hallanak?</p>
 	</div>
 	</div>
-	<br><p class="bigger-p-2 col-md-8">Az okokat persze lehetne széleskörűen kutatni, mi azonban egyszerűen csak megpróbálunk erre a problémára megoldást nyújtani a weboldalunk létrehozásával. Az a célunk, hogy létrehozzunk egy olyan gyűjtőhelyet, ahol az érdeklődő egy helyen talál meg mindent, amit okos, leleményes magyarok hoztak létre és dolgoznak rajta nap mint nap.
-Reméljük, te is hasznosnak és érdekesnek találod oldalunkat - és ne feledd, ha úgy érzed, valamit kihagytunk, de itt lenne a helye, lépj kapcsolatba velünk.</p>
+	<br><p class="bigger-p-2 col-md-8">Weboldalunk erre a problémára kíván megoldást nyújtani. A célunk, hogy népszerűsítsük a magyar kisvállalkozásokat, és létrehozzunk egy olyan gyűjtőhelyet, ahol bárki megtalálhatja ezeket egy helyen.
+Reméljük, te is hasznosnak és inspirálónak találod majd oldalunkat - és ne feledd, ha úgy érzed, valamit kihagytunk, de itt lenne a helye, lépj kapcsolatba velünk.</p>
 	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7-o1tV1hq7HfJm511VSrgQVdfG8Pm6G2wrFgRE7xu19K4Og/viewform?usp=sf_link" target="blank">Vállalkozás beküldése</a></div>
 	<div class="button button-secondary"><a href="mailto:hunmade2020@gmail.com" target="blank">Írj nekünk emailt</a></div>
 	</div>
@@ -97,9 +110,20 @@ Reméljük, te is hasznosnak és érdekesnek találod oldalunkat - és ne feledd
 
 <footer>
 <div class="footer-divider"></div>
-<div class="footer-text">Hun-made. Tőlünk, neked.</div>
+<div class="footer-text">©2020 Hun-made. Tőlünk, neked. <a href="privacy-policy.html">Adatvédelmi irányelvek</a></div>
 </footer>
 
+<div class="cookie-container">
+	<div class="cookie-content-container">
+		<div class="disclaimer-text">
+			<div class="cookie-title">
+				Ez az oldal sütiket használ
+			</div>
+			<p>A weboldalon sütiket használunk, hogy a legjobb felhasználói élményt nyújthassuk. Az Elfogadás gombra kattintva elfogadod az <a href="privacy-policy.html">Adatvédelmi irányelveinket</a>.</p>
+			<span class="disclaimer-button">Elfogadás</span>
+		</div>
+	</div>
+</div>
 
 <script src="js/jquery-2.1.1.js"></script>
 <script src="js/jquery.mixitup.min.js"></script>
