--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -14,7 +14,7 @@
 	<meta property="og:description" content="A collection of independent Hungarian small businesses.">
 
 	<link rel="stylesheet" href="css/style.css?v=1.4">
-	<title>Hun-made | About</title>
+	<title>Hun-made | Privacy policy</title>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
 	<!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
@@ -56,7 +56,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
 		<li><a href="index-en.html">Home</a></li>
-		<li><a class="selected-menu-item" href="about-en.html"><u>About</u></a></li>
+		<li><a href="about-en.html">About</a></li>
 
 
 		<li><a class="submit-container" href="https://docs.google.com/forms/d/e/1FAIpQLSfU7J0YxWmDz_hzcaNftkcziByKBA4xKT4Kk4zYip8-DdziLA/viewform?usp=sf_link" target="_blank">
@@ -64,7 +64,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<svg fill="none" height="16" viewBox="0 0 20 14" width="16" xmlns="http://www.w3.org/2000/svg"><path class="ls-color" d="m11.6667 2.5v1.66667h2.9916l-8.19163 8.19163 1.175 1.175 8.19163-8.19163v2.99166h1.6667v-5.83333zm4.1666 13.3333h-11.66663v-11.66663h5.83333v-1.66667h-5.83333c-.925 0-1.66667.75-1.66667 1.66667v11.66663c0 .4421.17559.866.48816 1.1785.31256.3126.73648.4882 1.17851.4882h11.66663c.4421 0 .866-.1756 1.1785-.4882.3126-.3125.4882-.7364.4882-1.1785v-5.8333h-1.6667z" fill="var(--Low-emp)"/></svg>
 			Submit a business</span></a></li>
 
-		<li><a aria-label="Váltás magyar nyelvre/Switch to Hungarian" class="language-switcher-container" href="about.html">
+		<li><a aria-label="Váltás magyar nyelvre/Switch to Hungarian" class="language-switcher-container" href="privacy-policy.html">
 			<span class="language-switcher">
 			<svg width="16" height="16" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 			<path class="ls-color" d="M14.9175 14.4917C14.7008 13.825 14.0758 13.3333 13.3341 13.3333H12.5008V10.8333C12.5008 10.6123 12.413 10.4003 12.2567 10.2441C12.1005 10.0878 11.8885 9.99999 11.6675 9.99999H6.66748V8.33332H8.33415C8.55516 8.33332 8.76712 8.24552 8.9234 8.08924C9.07968 7.93296 9.16748 7.721 9.16748 7.49999V5.83332H10.8341C11.2762 5.83332 11.7001 5.65773 12.0127 5.34517C12.3252 5.03261 12.5008 4.60868 12.5008 4.16666V3.82499C14.9425 4.80832 16.6675 7.19999 16.6675 9.99999C16.6675 11.7333 16.0008 13.3083 14.9175 14.4917ZM9.16748 16.6083C5.87581 16.2 3.33415 13.4 3.33415 9.99999C3.33415 9.48332 3.40081 8.98332 3.50915 8.50832L7.50081 12.5V13.3333C7.50081 13.7753 7.67641 14.1993 7.98897 14.5118C8.30153 14.8244 8.72545 15 9.16748 15V16.6083ZM10.0008 1.66666C8.90647 1.66666 7.82283 1.8822 6.81179 2.30099C5.80074 2.71978 4.88208 3.33361 4.10826 4.10743C2.54545 5.67024 1.66748 7.78985 1.66748 9.99999C1.66748 12.2101 2.54545 14.3297 4.10826 15.8925C4.88208 16.6664 5.80074 17.2802 6.81179 17.699C7.82283 18.1178 8.90647 18.3333 10.0008 18.3333C12.211 18.3333 14.3306 17.4553 15.8934 15.8925C17.4562 14.3297 18.3341 12.2101 18.3341 9.99999C18.3341 8.90564 18.1186 7.82201 17.6998 6.81096C17.281 5.79991 16.6672 4.88125 15.8934 4.10743C15.1195 3.33361 14.2009 2.71978 13.1898 2.30099C12.1788 1.8822 11.0952 1.66666 10.0008 1.66666Z" fill="var(--Low-emp)"/>
@@ -85,20 +85,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</a> -->
 
 <div class="hero-container-2">
-	<h1>About</h1>
-	<p class="bigger-p-2 description-2 col-md-8">Budapest, pretty girls and goulash... these are the most common things people mention when they amicably start chatting to us on a plane back to Budapest or when they casually talk to us on a meetup and learn that we are from Hungary.</p>
-	<div class="flex-wrapper-about row">
-		<div class="image-side col-xs-12 col-md-5">
-			<img src="images/flora-zsolti.jpg" alt="Two people taking a selfie while smiling in front of the Gellert Hotel.">
-			<p class="image-label"><a href="https://www.linkedin.com/in/cselenyiflora" target="blank">Flóra</a> and <a href="https://zsoltszilvai.com" target="blank">Zsolt</a>, the creators of this website</p>
-		</div>
-	<div class="text-side col-xs-12 col-md-7">
-	<br><p class="bigger-p-2">This is all great but we've always felt that something is missing: what about the people and great achievements of today's Hungary? Why does no one know about that? We believe that better showcasing the creative business ideas, ingenious arts and crafts that Hungarian entrepreneurs create, will help us add a new cliché to the well-known ones, something like this: "creative and talented Hungarians".</p>
-	</div>
-	</div>
-	<br><p class="bigger-p-2 col-md-8">And, as a big plus, it gives you the opportunity to find local suppliers and products more easily thus shop more sustainably. Browse among Hungarian small businesses and their ingenious products. Help us expand this list: if you know of a similar great idea, fill out our form.</p>
-	<div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU7J0YxWmDz_hzcaNftkcziByKBA4xKT4Kk4zYip8-DdziLA/viewform?usp=sf_link" target="blank">Submit a business</a></div>
-	<div class="button button-secondary"><a href="mailto:hunmade2020@gmail.com" target="blank">Send us an email</a></div>
+	<h1>Privacy policy</h1>
+
+	<p class="bigger-p-2 description-2 col-md-8">Please read this Privacy policy (the "Privacy Policy") carefully before using the <a href="https://hun-made.com/" target=”blank”>https://hun-made.com/</a> website (the “Website”). This Privacy Policy contains types of information that is collected and recorded by Hun-made and how we use it.</p>
+	<h2>Log Files</h2>
+		<p class="bigger-p-2 description-2 col-md-8">Hun-made follows a standard procedure of using log files. These files log visitors when they visit websites. The information collected by log files includes internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
+		<h2>Cookies</h2>
+		<p class="bigger-p-2 description-2 col-md-8">Like any other website, Hun-made uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.
+		<br><p class="bigger-p-2 description-2 col-md-8">For more general information on cookies, please read the "What Are Cookies" article on the <a href="https://www.cookieconsent.com/what-are-cookies/" target=”blank”>Cookie Consent website</a>.</p>
+		<br><p class="bigger-p-2 description-2 col-md-8">You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
+
+		<h2>Third Party Privacy Policies</h2>
+		<p class="bigger-p-2 description-2 col-md-8">Hun-made's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party providers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</p>
+
+		<h2>Consent</h2>
+		<p class="bigger-p-2 description-2 col-md-8">By using our website, you hereby consent to our Privacy Policy.</p>
+
+		<h2>Contacting us</h2>
+		<p class="bigger-p-2 description-2 col-md-8">If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
+
+		<div class="button button-secondary"><a href="mailto:hunmade2020@gmail.com" target="blank">Send us an email</a></div>
 	</div>
 
 
@@ -106,7 +112,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <footer>
 <div class="footer-divider"></div>
-<div class="footer-text">©2020 Hun-made with love. <a href="privacy-policy-en.html">Privacy policy</a></div>
+<div class="footer-text">©2020 Hun-made with love.</div>
 </footer>
 
 <div class="cookie-container">
