--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,17 +4,17 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<meta name="keywords" content="hungarian, hungary, entrepreneurs, ideas, hungarian deigner brands, arts & crafts, shops, collection, hipster, fair-trade, green, vegan">
-  <meta name="description" content="A collection of independent Hungarian small businesses.">
-  <meta property="og:title" content="Hun-made">
-  <meta property="og:site_name" content="Hun-made">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://hun-made.com">
-  <meta property="og:image" content="../ogimg-2.png">
-  <meta property="og:description" content="A collection of independent Hungarian small businesses.">
+	<meta name="keywords" content="magyar, magyarország, vállalkozások, vállalkozók, ötletek, magyar designer márkák, kézműves termékek, fair-trade, környezetbarát, tudatos, vegán">
+	<meta name="description" content="Független magyar kisvállalkozások egy helyen.">
+	<meta property="og:title" content="Hun-made">
+	<meta property="og:site_name" content="Hun-made">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://hun-made.com">
+	<meta property="og:image" content="../ogimg-2.png">
+	<meta property="og:description" content="Független magyar kisvállalkozások egy helyen.">
 
 	<link rel="stylesheet" href="css/style.css?v=1.4">
-	<title>Hun-made | 404</title>
+	<title>Hun-made | Adatvédelmi irányelvek</title>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
 	<!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
@@ -33,6 +33,7 @@
 
   gtag('config', 'UA-166314580-1');
 </script>
+
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -66,7 +67,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				Vállalkozás beküldése</span></a></li>
 
 
-		<li><a aria-label="Váltás angol nyelvre/Switch to English" class="language-switcher-container" href="index-en.html">
+		<li><a aria-label="Váltás angol nyelvre/Switch to English" class="language-switcher-container" href="privacy-policy-en.html">
 			<span class="language-switcher">
 			<svg width="16" height="16" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 			<path class="ls-color" d="M14.9175 14.4917C14.7008 13.825 14.0758 13.3333 13.3341 13.3333H12.5008V10.8333C12.5008 10.6123 12.413 10.4003 12.2567 10.2441C12.1005 10.0878 11.8885 9.99999 11.6675 9.99999H6.66748V8.33332H8.33415C8.55516 8.33332 8.76712 8.24552 8.9234 8.08924C9.07968 7.93296 9.16748 7.721 9.16748 7.49999V5.83332H10.8341C11.2762 5.83332 11.7001 5.65773 12.0127 5.34517C12.3252 5.03261 12.5008 4.60868 12.5008 4.16666V3.82499C14.9425 4.80832 16.6675 7.19999 16.6675 9.99999C16.6675 11.7333 16.0008 13.3083 14.9175 14.4917ZM9.16748 16.6083C5.87581 16.2 3.33415 13.4 3.33415 9.99999C3.33415 9.48332 3.40081 8.98332 3.50915 8.50832L7.50081 12.5V13.3333C7.50081 13.7753 7.67641 14.1993 7.98897 14.5118C8.30153 14.8244 8.72545 15 9.16748 15V16.6083ZM10.0008 1.66666C8.90647 1.66666 7.82283 1.8822 6.81179 2.30099C5.80074 2.71978 4.88208 3.33361 4.10826 4.10743C2.54545 5.67024 1.66748 7.78985 1.66748 9.99999C1.66748 12.2101 2.54545 14.3297 4.10826 15.8925C4.88208 16.6664 5.80074 17.2802 6.81179 17.699C7.82283 18.1178 8.90647 18.3333 10.0008 18.3333C12.211 18.3333 14.3306 17.4553 15.8934 15.8925C17.4562 14.3297 18.3341 12.2101 18.3341 9.99999C18.3341 8.90564 18.1186 7.82201 17.6998 6.81096C17.281 5.79991 16.6672 4.88125 15.8934 4.10743C15.1195 3.33361 14.2009 2.71978 13.1898 2.30099C12.1788 1.8822 11.0952 1.66666 10.0008 1.66666Z" fill="var(--Low-emp)"/>
@@ -80,23 +81,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="big-wrapper">
 
 
-<div class="container-404">
-	<div class="text-area-404">
-	<h1>Hiba / Error <span class="bold-text">404</span></h1>
-	<p class="bigger-p">Sajnos a keresett oldal nem található.</p>
-	<p class="bigger-p">It looks like the page you are looking for doesn’t exist.</p>
-	<!-- <div class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7-o1tV1hq7HfJm511VSrgQVdfG8Pm6G2wrFgRE7xu19K4Og/viewform?usp=sf_link" target="blank">Vállalkozás beküldése</a></div> -->
-	</div>
-	</div>
+<div class="hero-container-2">
+	<h1>Adatvédelmi irányelvek</h1>
+	<p class="bigger-p-2 description-2 col-md-8">Kérjük, a <a href="https://hun-made.com/" target=”blank”>https://hun-made.com/</a> weboldal használata előtt gondosan olvasd el Adatvédelmi irányelveinket (az "Irányelvek", "Adatvédelmi irányelvek"), mely információkat tartalmaz arra vonatkozóan, hogy milyen adatokat gyűjtünk és tárolunk a weboldalunk (a “Weboldal”) látogatóiról, és hogyan használjuk fel azokat.</p>
+	<h2>Naplófájlok</h2>
+		<p class="bigger-p-2 description-2 col-md-8">Weboldaunk naplófájlok segítségével tartja számon látogatóit, amikor azok a Weboldalra érkeznek. A naplófájlok által gyűjtött információk az alábbiakat tartalmazzák: IP címek, böngésző típusa, internetszolgáltató, dátum és idő, érkezési és kilépési oldalak, kattintások száma. A hun-made.com ezeket az információkat semmilyen módon nem tudja összekötni személyes azonosításra alkalmas információkkal. Az információgyűjtés fő célja: webhely adminisztráció, trendek elemzése, demográfiai információk elemzése.</p>
+		<h2>Sütik használata</h2>
+		<p class="bigger-p-2 description-2 col-md-8">Mint bármely más website, a hun-made is sütiket (cookie-kat) használ az információk tárolására. Ezek a sütik többek között a látogatók webhellyel kapcsolatos preferenciáira és tevékenységükre vonatkozó információkat tárolnak (pl. melyik oldalakon járt a látogató, és hova kattintott). Ezen információkat a weboldallal kapcsolatos élmény optimalizálására, személyre szabására használjuk.</p>
+		<br><p class="bigger-p-2 description-2 col-md-8">A sütikkel kapcsolatos további információkért kérjük olvasd el a <a href="https://hu.wikipedia.org/wiki/HTTP-s%C3%BCti" target="blank">"HTTP-süti"</a> Wikipédia bejegyzést.</p>
+		<br><p class="bigger-p-2 description-2 col-md-8">Amennyiben le szeretnéd tiltani a sütik használatát, azt a saját böngésződben teheted meg. Erre vonatkozó információkat böngésződ általános ismertetőjében találsz.</p>
+
+		<h2>Harmadik felek adatvédelmi irányelvei</h2>
+		<p class="bigger-p-2 description-2 col-md-8">A hun-made.com Irányelvei nem vonatkoznak semelyik másik weboldalra vagy hirdetőre, ezért javasoljuk, hogy az ezekre vonatkozó adatvédelmi információkról mindig az adott helyen tájékozódj.</p>
+
+		<h2>Hozzájárulás</h2>
+		<p class="bigger-p-2 description-2 col-md-8">A Webhely használatával elfogadod Adatvédelmi irányelveinket.</p>
+
+		<h2>Kapcsolat</h2>
+		<p class="bigger-p-2 description-2 col-md-8">Ha kérdésed van, vagy további információra lenne szükséged weboldalunk Adatvédelmi Irányelveivel kapcsolatban, kérjük lépj kapcsolatba velünk.</p>
+
+	<div class="button button-secondary"><a href="mailto:hunmade2020@gmail.com" target="blank">Írj nekünk emailt</a></div>
+</div>
 
 
 	</div>
 
 <footer>
 <div class="footer-divider"></div>
-<div class="footer-text">©2020 Hun-made with love. Tőlünk, neked. <a href="privacy-policy-en.html">Privacy policy</a> · <a href="privacy-policy.html">Adatvédelmi irányelvek</a></div>
+<div class="footer-text">©2020 Hun-made. Tőlünk, neked.</div>
 </footer>
 
+<div class="cookie-container">
+	<div class="cookie-content-container">
+		<div class="disclaimer-text">
+			<div class="cookie-title">
+				Ez az oldal sütiket használ
+			</div>
+			<p>A weboldalon sütiket használunk, hogy a legjobb felhasználói élményt nyújthassuk. Az Elfogadás gombra kattintva elfogadod az <a href="privacy-policy.html">Adatvédelmi irányelveinket</a>.</p>
+			<span class="disclaimer-button">Elfogadás</span>
+		</div>
+	</div>
+</div>
 
 <script src="js/jquery-2.1.1.js"></script>
 <script src="js/jquery.mixitup.min.js"></script>
