--- a/index-en.html
+++ b/index-en.html
@@ -13,7 +13,7 @@
 	<meta property="og:image" content="../ogimg-2.png">
 	<meta property="og:description" content="A collection of independent Hungarian small businesses.">
 
-	<link rel="stylesheet" href="css/style.css?v=1.4">
+	<link rel="stylesheet" href="css/style.css?v=1.5">
 	<title>Hun-made</title>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
@@ -1150,6 +1150,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						</ul>
 					</section>
 				</main>
+
+				<div class="newsletter-container col-xs-12 col-md-offset-1 col-md-10">
+					<p class="bigger-p description col-md-offset-1 col-md-10">Would you like to get updates about changes on our website?</p>
+				</div>
+
+				<div class="home-button-container">
+				<div class="button button-home"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfd95YiUa-5osSzoxF75txEb-bcnqUWHDJcH4LlQtMbKjW_zw/viewform?usp=sf_link" target="blank">Subscribe to our newsletter</a></div>
+				</div>
+
 			</div>
 
 			<footer>
