--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="../ogimg-2.png">
   <meta property="og:description" content="Független magyar kisvállalkozások egy helyen.">
 
-	<link rel="stylesheet" href="css/style.css?v=1.4">
+	<link rel="stylesheet" href="css/style.css?v=1.5">
 	<title>Hun-made</title>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
@@ -91,6 +91,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<h1>Független <span class="bold-text">magyar <br>kisvállalkozások</span> egy helyen.</h1>
 					<p class="bigger-p description col-md-offset-1 col-md-10">Válogass a minőségi divat, dizájn, kézműves és egyéb termékek között és fedezd fel a kedvenceidet te is.</p>
 				</div>
+
 
 				<main class="cd-main-content">
 					<div class="cd-tab-filter-wrapper col-md-offset-2 col-md-8">
@@ -1151,6 +1152,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						</ul>
 					</section>
 				</main>
+
+				<div class="newsletter-container col-xs-12 col-md-offset-1 col-md-10">
+					<p class="bigger-p description col-md-offset-1 col-md-10">Értesülj a weboldalunkkal kapcsolatos újdonságokról!</p>
+				</div>
+
+				<div class="home-button-container">
+				<div class="button button-home"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdtlUVBqTt_qw5h2pLvJXvNmAjnqOLMS3E4xg8EEk6E2wT_ZQ/viewform?usp=sf_link" target="blank">Feliratkozom a hírlevélre</a></div>
+				</div>
+
 			</div>
 
 
