--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="../ogimg-2.png">
   <meta property="og:description" content="Független magyar kisvállalkozások egy helyen.">
 
-	<link rel="stylesheet" href="css/style.css?v=1.5">
+	<link rel="stylesheet" href="css/style.css?v=1.6">
 	<title>Hun-made</title>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
@@ -218,14 +218,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 							</li>
 
-							<li class="card-padding mix art jewelry">
+							<li class="card-padding mix art jewelry fashion">
 								<a  class="cards__item gtm-cirrhopp" href="https://cirrhopp.com/" target="_blank">
 									<div class="card">
 										<div class="card__content">
 											<div class="card__image card__image--cirrhopp"></div>
 											<div class="tags">
-												<!-- <div class="tag">Kézműves termékek</div>
-												<div class="tag">·</div> -->
+												<div class="tag">Divat</div>
+												<div class="tag">·</div>
 												<div class="tag">Ékszer</div>
 											</div>
 											<div class="card__title">Cirrhopp</div>
@@ -774,15 +774,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 							</li>
 
-							<li class="card-padding mix art jewelry">
+							<li class="card-padding mix art jewelry fashion">
 								<a  class="cards__item gtm-panyizsuzsi" href="https://panyizsuzsi.hu/" target="_blank">
 									<div class="card">
 										<div class="card__content">
 											<div class="card__image card__image--panyizsuzsi"></div>
 											<div class="tags">
+												<div class="tag">Divat</div>
+												<div class="tag">·</div>
 												<div class="tag">Ékszer</div>
-												<!-- <div class="tag">·</div>
-												<div class="tag">Kézműves termékek</div> -->
 											</div>
 											<div class="card__title">Panyizsuzsi</div>
 											<p class="card__text">Üvegékszerek az építész-iparművész Panyi Zsuzsi műhelyéből.</p>
@@ -824,8 +824,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<div class="card__content">
 											<div class="card__image card__image--plantethics"></div>
 											<div class="tags">
-												<!-- <div class="tag">Kézműves termékek</div>
-												<div class="tag">·</div> -->
+												<div class="tag">Divat</div>
+												<div class="tag">·</div>
 												<div class="tag">Ékszer</div>
 												<div class="tag">·</div>
 												<div class="tag">Otthon</div>
