--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<div class="tag">Divat</div>
 											</div>
 											<div class="card__title">Nimiri</div>
-											<p class="card__text">Bio pamut gyerekruhák - ahogy egu magyar anyuka megálmodja.</p>
+											<p class="card__text">Bio pamut gyerekruhák - ahogy egy magyar anyuka megálmodja.</p>
 											<div class="delivery-option"><svg width="20" height="20" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M13.3333 3.33301L7.5 6.69967V13.2997L13.3333 16.6663L19.1667 13.2997V6.69967L13.3333 3.33301ZM13.3333 5.25801L16.5 7.08301L13.3333 8.90801L10.175 7.08301L13.3333 5.25801ZM0 5.83301V7.49967H5.83333V5.83301H0ZM9.16667 8.42467L12.5 10.3497V14.258L9.16667 12.3413V8.42467ZM17.5 8.42467V12.3413L14.1667 14.258V10.3497L17.5 8.42467ZM1.66667 9.16634V10.833H5.83333V9.16634H1.66667ZM3.33333 12.4997V14.1663H5.83333V12.4997" fill="var(--Low-emp)"/>
 											</svg>
