--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<section class="cards cd-gallery">
 						<ul>
 							<li class="card-padding mix fashion">
-								<a class="cards__item gtm-pomponia" href="https://www.pomponia.hu/" target="_blank">
+								<a class="cards__item gtm-pomponia" href="https://www.instagram.com/pomponiabridal" target="_blank">
 									<div class="card">
 										<div class="card__content">
 											<div class="card__image card__image--pomponia"></div>
