--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								<li class="filter" data-filter=".jewelry"><a href="#0" data-type="jewelry">Ékszer</a></li>
 								<li class="filter" data-filter=".wedding"><a href="#0" data-type="wedding">Esküvő</a></li>
 								<li class="filter" data-filter=".food"><a href="#0" data-type="food">Étel</a></li>
-								<li class="filter" data-filter=".art"><a href="#0" data-type="art">Képzmőművészet</a></li>
+								<li class="filter" data-filter=".art"><a href="#0" data-type="art">Képzőművészet</a></li>
 								<li class="filter" data-filter=".cosmetics"><a href="#0" data-type="cosmetics">Kozmetikumok</a></li>
 								<!-- <li class="filter" data-filter=".gardening"><a href="#0" data-type="gardening">Kertészet</a></li> -->
 								<li class="filter" data-filter=".home"><a href="#0" data-type="home">Otthon</a></li>
