--- a/index-en.html
+++ b/index-en.html
@@ -297,7 +297,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<div class="tag">·</div>
 												<div class="tag">Wedding</div>
 											</div>
-											<div class="card__title">Anna Jonás</div>
+											<div class="card__title">Anna Jónás</div>
 											<p class="card__text">Unique wedding and casual dresses designed by Anna Jónás.</p>
 											<!-- <div class="card-divider"></div> -->
 											<div class="delivery-option"><svg width="20" height="20" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1211,24 +1211,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 							</li>
 
-							<li class="card-padding mix other hungary">
-								<a  class="cards__item gtm-megyeriszabolcs" href="https://www.megyeriszabolcskerteszete.hu/" target="_blank">
-									<div class="card">
-										<div class="card__content">
-											<div class="card__image card__image--megyeriszabolcs"></div>
-											<div class="tags">
-												<div class="tag">Other</div>
-											</div>
-											<div class="card__title">Szabolcs Megyeri Horticulture</div>
-											<p class="card__text">Popular gardener, blogger, vlogger selling all things plants and garden accessories.</p>
-											<div class="delivery-option"><svg width="20" height="20" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path d="M13.3333 3.33301L7.5 6.69967V13.2997L13.3333 16.6663L19.1667 13.2997V6.69967L13.3333 3.33301ZM13.3333 5.25801L16.5 7.08301L13.3333 8.90801L10.175 7.08301L13.3333 5.25801ZM0 5.83301V7.49967H5.83333V5.83301H0ZM9.16667 8.42467L12.5 10.3497V14.258L9.16667 12.3413V8.42467ZM17.5 8.42467V12.3413L14.1667 14.258V10.3497L17.5 8.42467ZM1.66667 9.16634V10.833H5.83333V9.16634H1.66667ZM3.33333 12.4997V14.1663H5.83333V12.4997" fill="var(--Low-emp)"/>
-											</svg>
-											Delivers to Hungary</div>
-										</div>
-									</div>
-								</a>
-							</li>
+
 
 							<!-- <li class="card-padding mix fashion jewelry worldwide">
 								<a  class="cards__item gtm-meska" href="https://www.meska.hu/" target="_blank">
@@ -1433,6 +1416,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<path d="M13.3333 3.33301L7.5 6.69967V13.2997L13.3333 16.6663L19.1667 13.2997V6.69967L13.3333 3.33301ZM13.3333 5.25801L16.5 7.08301L13.3333 8.90801L10.175 7.08301L13.3333 5.25801ZM0 5.83301V7.49967H5.83333V5.83301H0ZM9.16667 8.42467L12.5 10.3497V14.258L9.16667 12.3413V8.42467ZM17.5 8.42467V12.3413L14.1667 14.258V10.3497L17.5 8.42467ZM1.66667 9.16634V10.833H5.83333V9.16634H1.66667ZM3.33333 12.4997V14.1663H5.83333V12.4997" fill="var(--Low-emp)"/>
 											</svg>
 											Delivers to Hungary</div>
+										</div>
+									</div>
+								</a>
+							</li>
+
+							<li class="card-padding mix art home">
+								<a  class="cards__item gtm-szirmai" href="https://noar.hu/" target="_blank">
+									<div class="card">
+										<div class="card__content">
+											<div class="card__image card__image--szirmai"></div>
+											<div class="tags">
+												<div class="tag">Art</div>
+												<div class="tag">·</div>
+												<div class="tag">Home</div>
+											</div>
+											<div class="card__title">Nóra Szirmai</div>
+											<p class="card__text">Unique metal and wooden sculptures and home decor from sculptor Nóra Szirmai.</p>
+											<div class="delivery-option"><svg width="20" height="20" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M9.99935 5.41699C10.5519 5.41699 11.0818 5.63649 11.4725 6.02719C11.8632 6.41789 12.0827 6.94779 12.0827 7.50033C12.0827 7.77391 12.0288 8.04482 11.9241 8.29758C11.8194 8.55034 11.6659 8.78001 11.4725 8.97346C11.279 9.16692 11.0494 9.32038 10.7966 9.42507C10.5438 9.52977 10.2729 9.58366 9.99935 9.58366C9.44682 9.58366 8.91691 9.36417 8.52621 8.97346C8.13551 8.58276 7.91602 8.05286 7.91602 7.50033C7.91602 6.94779 8.13551 6.41789 8.52621 6.02719C8.91691 5.63649 9.44682 5.41699 9.99935 5.41699ZM9.99935 1.66699C11.5464 1.66699 13.0302 2.28157 14.1241 3.37554C15.2181 4.4695 15.8327 5.95323 15.8327 7.50033C15.8327 11.8753 9.99935 18.3337 9.99935 18.3337C9.99935 18.3337 4.16602 11.8753 4.16602 7.50033C4.16602 5.95323 4.7806 4.4695 5.87456 3.37554C6.96852 2.28157 8.45225 1.66699 9.99935 1.66699V1.66699ZM9.99935 3.33366C8.89428 3.33366 7.83447 3.77265 7.05307 4.55405C6.27167 5.33545 5.83268 6.39526 5.83268 7.50033C5.83268 8.33366 5.83268 10.0003 9.99935 15.592C14.166 10.0003 14.166 8.33366 14.166 7.50033C14.166 6.39526 13.727 5.33545 12.9456 4.55405C12.1642 3.77265 11.1044 3.33366 9.99935 3.33366V3.33366Z" fill="var(--Low-emp)"/>
+											</svg>
+											In-store pickup</div>
 										</div>
 									</div>
 								</a>
@@ -1789,6 +1793,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 											</div>
 											<div class="card__title">Szakállasember</div>
 											<p class="card__text">The ultimate men hygiene and beard care brand.</p>
+											<div class="delivery-option"><svg width="20" height="20" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M13.3333 3.33301L7.5 6.69967V13.2997L13.3333 16.6663L19.1667 13.2997V6.69967L13.3333 3.33301ZM13.3333 5.25801L16.5 7.08301L13.3333 8.90801L10.175 7.08301L13.3333 5.25801ZM0 5.83301V7.49967H5.83333V5.83301H0ZM9.16667 8.42467L12.5 10.3497V14.258L9.16667 12.3413V8.42467ZM17.5 8.42467V12.3413L14.1667 14.258V10.3497L17.5 8.42467ZM1.66667 9.16634V10.833H5.83333V9.16634H1.66667ZM3.33333 12.4997V14.1663H5.83333V12.4997" fill="var(--Low-emp)"/>
+											</svg>
+											Delivers to Hungary</div>
+										</div>
+									</div>
+								</a>
+							</li>
+
+							<li class="card-padding mix other hungary">
+								<a  class="cards__item gtm-megyeriszabolcs" href="https://www.megyeriszabolcskerteszete.hu/" target="_blank">
+									<div class="card">
+										<div class="card__content">
+											<div class="card__image card__image--megyeriszabolcs"></div>
+											<div class="tags">
+												<div class="tag">Other</div>
+											</div>
+											<div class="card__title">Szabolcs Megyeri Horticulture</div>
+											<p class="card__text">Popular gardener, blogger, vlogger selling all things plants and garden accessories.</p>
 											<div class="delivery-option"><svg width="20" height="20" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path d="M13.3333 3.33301L7.5 6.69967V13.2997L13.3333 16.6663L19.1667 13.2997V6.69967L13.3333 3.33301ZM13.3333 5.25801L16.5 7.08301L13.3333 8.90801L10.175 7.08301L13.3333 5.25801ZM0 5.83301V7.49967H5.83333V5.83301H0ZM9.16667 8.42467L12.5 10.3497V14.258L9.16667 12.3413V8.42467ZM17.5 8.42467V12.3413L14.1667 14.258V10.3497L17.5 8.42467ZM1.66667 9.16634V10.833H5.83333V9.16634H1.66667ZM3.33333 12.4997V14.1663H5.83333V12.4997" fill="var(--Low-emp)"/>
 											</svg>
