--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="../ogimg-3.png">
   <meta property="og:description" content="Független magyar kisvállalkozások egy helyen.">
 
-	<link rel="stylesheet" href="css/style.css?v=1.8">
+	<link rel="stylesheet" href="css/style.css?v=1.9">
 	<title>Hun-made</title>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11/dist/vue.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="css/flexboxgrid.css">
@@ -1752,6 +1752,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 							</li>
 
+							<li class="card-padding mix home">
+								<a  class="cards__item gtm-szaszzsofi" href="https://www.instagram.com/szaszsofi/" target="_blank">
+									<div class="card">
+										<div class="card__content">
+											<div class="card__image card__image--szaszzsofi"></div>
+											<div class="tags">
+												<!-- <div class="tag">Arts & Crafts</div>
+												<div class="tag">·</div> -->
+												<div class="tag">Otthon</div>
+											</div>
+											<div class="card__title">Szász Zsófia</div>
+											<p class="card__text">Művészi rajzok és grafikák mindennapi kellékeiden.</p>
+											<div class="delivery-option"><svg width="20" height="20" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M13.3333 3.33301L7.5 6.69967V13.2997L13.3333 16.6663L19.1667 13.2997V6.69967L13.3333 3.33301ZM13.3333 5.25801L16.5 7.08301L13.3333 8.90801L10.175 7.08301L13.3333 5.25801ZM0 5.83301V7.49967H5.83333V5.83301H0ZM9.16667 8.42467L12.5 10.3497V14.258L9.16667 12.3413V8.42467ZM17.5 8.42467V12.3413L14.1667 14.258V10.3497L17.5 8.42467ZM1.66667 9.16634V10.833H5.83333V9.16634H1.66667ZM3.33333 12.4997V14.1663H5.83333V12.4997" fill="var(--Low-emp)"/>
+											</svg>
+											Kiszállítás egész Magyarországon</div>
+										</div>
+									</div>
+								</a>
+							</li>
+
 							<li class="card-padding mix art home">
 								<a  class="cards__item gtm-szirmai" href="https://noar.hu/" target="_blank">
 									<div class="card">
@@ -2067,26 +2088,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 							</li>
 
-							<li class="card-padding mix home">
-								<a  class="cards__item gtm-szaszzsofi" href="https://www.instagram.com/szaszsofi/" target="_blank">
-									<div class="card">
-										<div class="card__content">
-											<div class="card__image card__image--szaszzsofi"></div>
-											<div class="tags">
-												<!-- <div class="tag">Arts & Crafts</div>
-												<div class="tag">·</div> -->
-												<div class="tag">Otthon</div>
-											</div>
-											<div class="card__title">Zsófia Szász</div>
-											<p class="card__text">Művészi rajzok és grafikák mindennapi kellékeiden.</p>
-											<div class="delivery-option"><svg width="20" height="20" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-												<path d="M13.3333 3.33301L7.5 6.69967V13.2997L13.3333 16.6663L19.1667 13.2997V6.69967L13.3333 3.33301ZM13.3333 5.25801L16.5 7.08301L13.3333 8.90801L10.175 7.08301L13.3333 5.25801ZM0 5.83301V7.49967H5.83333V5.83301H0ZM9.16667 8.42467L12.5 10.3497V14.258L9.16667 12.3413V8.42467ZM17.5 8.42467V12.3413L14.1667 14.258V10.3497L17.5 8.42467ZM1.66667 9.16634V10.833H5.83333V9.16634H1.66667ZM3.33333 12.4997V14.1663H5.83333V12.4997" fill="var(--Low-emp)"/>
-											</svg>
-											Kiszállítás egész Magyarországon</div>
-										</div>
-									</div>
-								</a>
-							</li>
+
 
 							<!-- <li class="card-padding mix baby fashion food home jewelry other">
 								<a  class="cards__item gtm-buyusacoffee" href="https://www.buymeacoff.ee/projecthunmade" target="_blank">
