--- a/index-en.html
+++ b/index-en.html
@@ -93,7 +93,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				<div class="hero-container col-xs-12 col-md-offset-1 col-md-10">
 					<h1>A collection of <span class="bold-text">independent Hungarian</span> small businesses.</h1>
-					<p class="bigger-p description col-md-offset-1 col-md-10">Browse among the quality fashion, design and other products, arts & crafts made by Hungarians and find your favorites.</p>
+					<p class="bigger-p description col-md-offset-1 col-md-10">Browse among the quality arts & crafts, fashion, design and other products made by Hungarians and find your favorites.</p>
 				</div>
 
 				<main class="cd-main-content">
