--- a/index.html
+++ b/index.html
@@ -831,15 +831,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 							</li>
 
-							<li class="card-padding mix fashion">
+							<li class="card-padding mix fashion bags">
 								<a  class="cards__item gtm-helix" href="https://www.helixgoods.com/" target="_blank">
 									<div class="card">
 										<div class="card__content">
 											<div class="card__image card__image--helix"></div>
 											<div class="tags">
 												<div class="tag">Divat</div>
-												<!-- <div class="tag">·</div>
-												<div class="tag">Fashion</div> -->
+												<div class="tag">·</div>
+												<div class="tag">Táskák</div>
 											</div>
 											<div class="card__title">Helix</div>
 											<p class="card__text">Hajóponyvából és textilbőrből készült, párnázott, strapabíró táskák.</p>
