--- a/index-en.html
+++ b/index-en.html
@@ -899,15 +899,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 							</li>
 
-							<li class="card-padding mix fashion worldwide">
+							<li class="card-padding mix fashion bags worldwide">
 								<a  class="cards__item gtm-helix" href="https://www.helixgoods.com/" target="_blank">
 									<div class="card">
 										<div class="card__content">
 											<div class="card__image card__image--helix"></div>
 											<div class="tags">
+												<div class="tag">Bags</div>
+												<div class="tag">·</div>
 												<div class="tag">Fashion</div>
-												<!-- <div class="tag">·</div>
-												<div class="tag">Fashion</div> -->
 											</div>
 											<div class="card__title">Helix</div>
 											<p class="card__text">Rugged, unique, urban goods from Budapest.</p>
