--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -1,4 +1,4 @@
-<!doctype html>
+css/style.css?v=2.2<!doctype html>
 <html lang="en" class="no-js">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
