--- a/404.html
+++ b/404.html
@@ -37,10 +37,10 @@
 		<li><a href="about.html">Rólunk</a></li>
 
 
-			<li><a class="submit-container" href="https://docs.google.com/forms/d/e/1FAIpQLSc7-o1tV1hq7HfJm511VSrgQVdfG8Pm6G2wrFgRE7xu19K4Og/viewform?usp=sf_link" target="_blank">
+<!-- 			<li><a class="submit-container" href="https://docs.google.com/forms/d/e/1FAIpQLSc7-o1tV1hq7HfJm511VSrgQVdfG8Pm6G2wrFgRE7xu19K4Og/viewform?usp=sf_link" target="_blank">
 				<span class="submit">
 				<svg fill="none" height="16" viewBox="0 0 20 14" width="16" xmlns="http://www.w3.org/2000/svg"><path class="ls-color" d="m11.6667 2.5v1.66667h2.9916l-8.19163 8.19163 1.175 1.175 8.19163-8.19163v2.99166h1.6667v-5.83333zm4.1666 13.3333h-11.66663v-11.66663h5.83333v-1.66667h-5.83333c-.925 0-1.66667.75-1.66667 1.66667v11.66663c0 .4421.17559.866.48816 1.1785.31256.3126.73648.4882 1.17851.4882h11.66663c.4421 0 .866-.1756 1.1785-.4882.3126-.3125.4882-.7364.4882-1.1785v-5.8333h-1.6667z" fill="var(--Low-emp)"/></svg>
-				Vállalkozás beküldése</span></a></li>
+				Vállalkozás beküldése</span></a></li> -->
 
 
 		<li><a aria-label="Váltás angol nyelvre/Switch to English" class="language-switcher-container" href="index-en.html">
